# ActsETL

./: .gitignore  pyproject.toml  readme.txt  requirements.txt
actsetl/: cli.py  html.py
actsetl/akn/: skeleton.py  utils.py
actsetl/parsers/: common.py  eisb.py  eisb_provisions.py  eisb_structure.py  patterns.py
actsetl/resources/schemas/: xml.xsd
actsetl/resources/xslt/: akn2html.xsl  akn2html.xslt  eisb_transform.xslt
docs/: DEBUGGING.md  akn-element-hierarchy.md  copilot-instructions.md  definitions-model.md  eid-conventions-review.md  parsing_alternatives_discussion.md
docs/examples/: definition_sections_example.akn.xml
tests/parsers/: test_eisb.py  test_eisb_provisions.py  test_eisb_structure.py  test_models.py  test_patterns.py
tests/test_data/akn_expected_output/: citation_and_commencement_section.akn.xml  expected_parse_p_output.xml  happy_path.xml  part_and_1_section.akn.xml
tests/test_data/eisb_input/: Inserted_tables_with_Part_header.eisb.xml  act_20_2024.eisb.xml  act_42_2024.xml  act_43_2024.eisb.xml  act_level_definitions.eisb.xml  amendment_to_definition_and_schedule.xml  citation_and_commencement_section.eisb.xml  clauses.eisb.xml  clauses.xml  complex_amendment_provisions.eisb.xml  happy_path.xml  inline_amendments_nested.eisb.xml  inserted_table.eisb.xml  malformed.xml  mixed_content_amendments.xml  para_h_and_i_to_subparas.eisb.xml  para_i_followed_by_subpara.eisb.xml  parse_p_input.eisb.xml  part_and_1_section.eisb.xml  part_definitions_section.eisb.xml  sandwich_clause_no_amendments.eisb.xml  schedules.eisb.xml  skeleton.eisb.xml  (+3 more)
